final version of lab

--- a/class-10/lab-a/style.css
+++ b/class-10/lab-a/style.css
@@ -6,7 +6,9 @@ body {
   width: 900px;
   margin: 0 auto;
 } 
-
+.cursive {
+  font-family: "Brush Script MT", "Brush Script Std", cursive;
+}
 .nav {
   display: inline-block;
 }
